# parent-match

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  seed.py
backend/core/: auth.py  config.py  database.py  exceptions.py
backend/domains/borrowing_rates/: constants.py  mapper.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/domains/borrowing_rates/models/: borrowing_rate.py
backend/domains/posts/: __init__.py  models.py  router.py  schemas.py
backend/domains/users/: models.py  router.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 1bb4372daa38_initial_migration.py  5cd8ed458194_add_posts_and_comments.py  72f481ed9f09_add_posts_and_comments_schema.py  a3f9e1d2b4c7_add_users_table_and_auth0_sub_to_posts.py
backend/scripts/: ingest.py
backend/tests/: conftest.py
backend/tests/domains/borrowing_rates/: test_mappers.py  test_repository.py  test_router.py  test_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthProvider.tsx  Navbar.tsx  UserDropdown.tsx
frontend/src/config/: auth.ts
frontend/src/core/api/: client.ts
frontend/src/features/borrowing-costs/: api.ts
frontend/src/features/borrowing-costs/components/: Dashboard.test.tsx  Dashboard.tsx  (+4 more)
frontend/src/features/posts/: api.ts  types.ts
frontend/src/features/users/: api.ts  types.ts
frontend/src/pages/: ProfilePage.tsx
(+13 files in other folders)
